--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "particleground": "https://github.com/jnicol/particleground.git"
   },
   "overrides": {
     "bootstrap-sass": {
